# SearchEngine

./: CMakeLists.txt  README.md  answers.json  config.json  main.cpp  request.json
gtests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchServer_test.cpp  test1.cpp
include/: ConverterJson.h  InvertedIndex.h  JsonFill.h  SearchServer.h
resources/var2 (more texts)/: request.json
src/: ConverterJson.cpp  InvertedIndex.cpp  JsonFill.cpp  SearchServer.cpp
